# mathscan

./: .gitignore  CLEANUP_UTILITY_README.md  CMakeLists.txt  INSTALLATION.md  OCR_MODULE_README.md  OCR_TOOL_README.md  README.md  setup-env.bat  setup-windows.ps1  verify.bat
include/: mainwindow.h  ocrprocessor.h
src/: cleanup_main.cpp  main.cpp  mainwindow.cpp  ocr_main.cpp  ocrprocessor.cpp  qt_checker.cpp
